# Smile

./: CMakeLists.txt  Smile.cpp  addlibtosystem.sh
.cache/clangd/index/: Debug.hpp.D4E5FD18A01080CD.idx  Graphics.cpp.3E57394865C8680D.idx  Graphics.hpp.24420D01E7A073FC.idx  Graphics.hpp.A77F8BF48AEFC98D.idx  Smile.cpp.D230AD4EE854B211.idx  Window.cpp.CF1B03F3B655617F.idx  Window.hpp.34D8BABFCCC205B4.idx  Window.hpp.50C880A8648F9618.idx  boing.c.AAC24FDE0FD76F5B.idx  clipboard.c.3DBAD3961A98ABE0.idx  context.c.F72E2BB20FF72AA5.idx  cursor.c.7B755E0D83E44FDE.idx  egl_context.c.7EBF6B66475041F7.idx  egl_context.h.44D2927BD3730393.idx  empty.c.C4EA7BEF57A7D6F5.idx  events.c.CEBCDE1D155CC8BB.idx  gamma.c.E5C153C0A6B4311A.idx  gears.c.7481583603EB95EC.idx  getopt.c.B2972EC08D019FB2.idx  getopt.h.1536600D7C48D6F9.idx  gl.h.46EF258D1B87A42B.idx  glad.c.53217E79EC5E1126.idx  glad.h.9DDE8560504EBE15.idx  glad_gl.c.B3596B2678E4F836.idx  glad_vulkan.c.546471F23E69AE2F.idx  glfw3.h.3B32103C41FD54E6.idx  glfw3.h.A9EA4AC13D15D5AF.idx  glfwinfo.c.62271B6BB39E7F34.idx  glx_context.c.7D0129F23D3BEB24.idx  glx_context.h.1D2B611D88FC11FB.idx  heightmap.c.D8FC6D86A95717C8.idx  icon.c.161E681D22B82573.idx  iconify.c.4CF6B6D6273B95DF.idx  init.c.7157433B7FCA9A59.idx  (+47 more)
Examples/: BasicWindow.cpp  Examples.hpp
include/: Smile.hpp
include/Core/: Core.hpp  GameObject.hpp  Group.hpp  Input.hpp  Systems.hpp
include/Debug/: Debug.hpp
include/Scripting/: CScript.hpp
include/Window/: Window.hpp
include/glad/: glad.h
src/: Graphics.cpp  Group.cpp  Renderer.cpp  Window.cpp  glad.c
(+8 files in other folders)
